--- a/translations/sentinels.tex/ru.po
+++ b/translations/sentinels.tex/ru.po
@@ -24,7 +24,8 @@ msgid ""
 "\\addscenariosection{1}{Cooperative Scenario}{Sentinels}{\\images/"
 "sentinel.png}"
 msgstr ""
-"\\addscenariosection{1}{Кооперативный сценарий}{Стражи}{\\images/sentinel.png}"
+"\\addscenariosection{1}{Кооперативный сценарий}{Стражи}{\\images/"
+"sentinel.png}"
 
 #. type: multicols
 #: coops/sentinels.tex:5 coops/titans_stronghold.tex:5
@@ -135,7 +136,7 @@ msgid ""
 "\\textbf{Player Count:} 2\n"
 "\n"
 msgstr ""
-"\\textbf{Число Игроков:} 2\n"
+"\\textbf{Число игроков:} 2\n"
 "\n"
 
 #. type: multicols
@@ -321,7 +322,7 @@ msgid ""
 "One of your Towns is captured, or a Main Hero is defeated in a battle (retreat doesn't count).\n"
 "\n"
 msgstr ""
-"Один из ваших Городов захвачен, или Главный Герой побеждён в битве (отступление не считается).\n"
+"Один из ваших Городов захвачен, или основной герой побеждён в битве (отступление не считается).\n"
 "\n"
 
 #. type: multicols
@@ -442,12 +443,12 @@ msgid ""
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item  Игнорируйте жёлтые границы на стартовых Элементах.\n"
-"  \\item Торговля ресурсами доступна когда активный Герой посещает Торговый Пост или на поле рядом с союзным Героем.\n"
+"  \\item Торговля ресурсами доступна когда активный герой посещает Торговый Пост или на поле рядом с союзным героем.\n"
 "  \\item Герой, победивший вражескую армию, получает 2 \\svg{experience}.\n"
 "    Игрок бросает два кубика сокровищ и выбирает один результат.\n"
 "  \\item Кроме того, игроки не могут:\n"
 "  \\begin{itemize}\n"
-"      \\item Атаковать других Героев.\n"
+"      \\item Атаковать других героев.\n"
 "      \\item Захватывать Шахту или Посёлок под флагом противника.\n"
 "  \\end{itemize}\n"
 "\\end{itemize}\n"
@@ -479,7 +480,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Вражеские армии появляются на случайном поле с Обелиском (используйте миниатюры Героев из фракций, не участвующих в игре).\n"
+"  \\item Вражеские армии появляются на случайном поле с Обелиском (используйте миниатюры героев из фракций, не участвующих в игре).\n"
 "  \\item Определите поле Обелиска, бросив 2 кубика атаки. Применяйте результаты как (К1/К2), перебрасывайте 0:\n"
 "  \\begin{itemize}[leftmargin=15pt]\n"
 "    \\item $+1$/$+1$ = Север\n"
@@ -502,7 +503,7 @@ msgstr ""
 "  \\item Для сбалансированного появления врагов в раундах 7 и 9 бросайте только второй кубик атаки (К2). Для К1 используйте противоположный результату из предыдущего раунда.\n"
 "  Раунды 8 и 10 случайны.\n"
 "  \\item Если элемент, где должен появиться враг, ещё не открыт, переверните его и расположите по своему усмотрению.\n"
-"  \\item Если на поле, где появляется враг, находится Герой, битва начинается немедленно.\n"
+"  \\item Если на поле, где появляется враг, находится герой, битва начинается немедленно.\n"
 "\n"
 
 #. type: multicols
@@ -518,7 +519,7 @@ msgid ""
 "\n"
 msgstr ""
 "  \\item Вражеские армии имеют 3 \\svg{movement} за раунд.\n"
-"  \\item Вражеские армии двигаются в конце каждого раунда, начиная с раунда их появления.\n"
+"  \\item Вражеские армии двигаются в конце каждого раунда, начиная с раунда появления.\n"
 "  \\item Вражеские армии двигаются по правилам из Книги Правил (стр. 33), но вместо захвата уничтожают всё на своём пути.\n"
 "    Размещайте чёрные кубики на каждом поле, через которое они прошли, считая эти поля пустыми с этого момента.\n"
 "  \\item Если движение врага может идти в разных направлениях, игроки решают, куда он направится.\n"
@@ -532,7 +533,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Combat with\\\\Enemy Armies}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Сражение с вражеской армией}}\n"
+"\\subsection*{\\MakeUppercase{Сражения с вражескими\\\\армиями}}\n"
 "\n"
 
 #. type: multicols
@@ -549,11 +550,11 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Сражение с вражескими армиями длительностью более одного раунда боя не тратит \\svg{movement}.\n"
-"  \\item Во время сражения с вражеской армией Герой может отступить, когда должен Активироваться любой его юнит.\n"
-"    Отступающий Главный Герой теряет все оставшиеся ОП и возвращается в выбранный им союзный Город или Посёлок, сохраняя все оставшиеся юниты.\n"
-"  \\item Отступающие Второстепенные Герои удаляются из игры, но их оставшиеся юниты сохраняются.\n"
-"  \\item Уничтоженные вражеские юниты не возрождаются..\n"
+"  \\item Сражение с вражескими армиями дольше одного раунда боя не тратит \\svg{movement}.\n"
+"  \\item Во время сражения с вражеской армией герой может отступить, когда должен активироваться любой его юнит.\n"
+"    Отступающий основной герой теряет все оставшиеся ОП и возвращается в выбранный им союзный Город или Посёлок, сохраняя все оставшиеся юниты.\n"
+"  \\item Отступающие вторичные герои удаляются из игры, но их оставшиеся юниты сохраняются.\n"
+"  \\item Уничтоженные вражеские юниты не возрождаются.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -580,10 +581,10 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item  В 10 раунде появляется Армия Босса. Она отличается от предыдущих армий тем, что усиливается из фиксированного пула Нейтральных юнитов (пул усиления = число в скобках в таблице ниже).\n"
-"  \\item В начале 2 раунда боя и каждого последующего раунда, 2 юнита усиливают оставшуюся армию из перемешанного пула усиления (до максимум 5 юнитов), чтобы продолжить бой до отступления игрока или уничтожения всех Нейтральных юнитов из пула усиления. \textit{Если количество вражеских Юнитов в начале раунда равно 1 или меньше, возьмите до 4 Юнитов (т.е. после усиления на поле всегда остаётся 4 или 5 вражеских Юнитов, если они доступны).}\n"
+"  \\item  В 10 раунде появляется армия босса. Она отличается от предыдущих армий тем, что усиливается из фиксированного пула нейтральных юнитов (пул усиления = число в скобках в таблице ниже).\n"
+"  \\item В начале 2 раунда боя и каждого последующего раунда, 2 юнита усиливают оставшуюся армию из перемешанного пула усиления (до максимум 5 юнитов), чтобы продолжить бой до отступления игрока или уничтожения всех нейтральных юнитов из пула усиления. \\textit{Если количество вражеских юнитов в начале раунда равно 1 или меньше, возьмите до 4 юнитов (т.е. после усиления на поле всегда остаётся 4 или 5 вражеских юнитов, если они доступны).}\n"
 "  \\item Разместите усиливающие юниты на вражеской задней линии, начиная слева с самой низкой инициативы (сначала юниты \\svg{unit_ranged}). При необходимости продолжите на следующей линии в том же порядке.\n"
-"  \\item Когда игрок отступает, вражеская армия берёт минимум 4 юнита и использует их как стартовые юниты в следующем сражении.\n"
+"  \\item Когда игрок отступает, вражеская армия берёт минимум 4 юнита и использует их как стартовые в следующем сражении.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -659,11 +660,11 @@ msgstr ""
 "\\let\\origgolden\\golden \\let\\origazure\\azure \\renewcommand{\\bronze}"
 "{\\origbronze[12]} \\renewcommand{\\silver}{\\origsilver[12]} "
 "\\renewcommand{\\golden}{\\origgolden[12]} \\renewcommand{\\azure}"
-"{\\origazure[12]} \\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} "
-"& \\darkcell{Раунд 6 + 7} & \\darkcell{Раунд 8 + 9} & \\darkcell{Раунд 10}\\"
-"\\ \\darkcell[1.4]{Лёгкий} & \\lightcell[1.4]{\\bronze \\silver \\silver "
-"\\silver \\golden} & \\lightcell[1.4]{\\silver \\silver \\silver \\golden "
-"\\golden} & \\lightcell[1.4]{\\silver \\silver \\golden \\azure "
+"{\\origazure[12]} \\begin{tabularx}{0.95\\linewidth}{p{0.18\\linewidth}XXXX} "
+"& \\darkcell{Раунды 6 + 7} & \\darkcell{Раунды 8 + 9} & \\darkcell{Раунд "
+"10}\\\\ \\darkcell[1.4]{Лёгкий} & \\lightcell[1.4]{\\bronze \\silver "
+"\\silver \\silver \\golden} & \\lightcell[1.4]{\\silver \\silver \\silver "
+"\\golden \\golden} & \\lightcell[1.4]{\\silver \\silver \\golden \\azure "
 "\\footref{azure} \\linebreak (2\\bronze, 4\\silver, 3\\golden, 1\\azure)}\\"
 "\\ \\darkcell[1.4]{Нормальный} & \\lightcell[1.4]{\\silver \\silver \\silver "
 "\\golden \\golden} & \\lightcell[1.4]{\\silver \\silver \\silver \\golden "
@@ -689,4 +690,5 @@ msgid ""
 "Always 1 Unit of Azure Dragons (starting Units of Boss Army). The rest is "
 "random\\label{azure}."
 msgstr ""
-"Всегда 1 Юнит Лазурных Драконов (стартовые Юниты Армии Босса). Остальные случайны\\label{azure}."
+"Всегда 1 юнит Лазурных Драконов (стартовые юниты армии босса). Остальные "
+"случайны\\label{azure}."
