--- a/translations/titans_stronghold.tex/de.po
+++ b/translations/titans_stronghold.tex/de.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2025-06-27 09:55+0200\n"
+"POT-Creation-Date: 2025-10-19 11:49+0000\n"
 "PO-Revision-Date: 2025-06-28 19:46+0200\n"
 "Last-Translator: Andreas Beck <a-beck@gmx.net>\n"
 "Language-Team: German <https://hosted.weblate.org/projects/homm3bg-fan-made-"
@@ -34,7 +34,7 @@ msgstr ""
 #: campaigns/castle_two_knights_defense.tex:5
 #: campaigns/castle_two_knights_defense.tex:91
 #: campaigns/castle_two_knights_defense.tex:129 sections/credits.tex:10
-#: sections/random_scenario.tex:5 sections/random_scenario.tex:285
+#: sections/random_scenario.tex:5 sections/random_scenario.tex:283
 #: sections/recommendations.tex:71 sections/recommendations.tex:126
 #: sections/what_to_play.tex:5
 #, no-wrap
@@ -148,7 +148,7 @@ msgstr ""
 #: campaigns/inferno_steadwicks_fall.tex:146
 #: campaigns/inferno_deal_with_the_devil.tex:97
 #: campaigns/castle_greek_gift.tex:87 campaigns/castle_sicilian_dragon.tex:95
-#: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:287
+#: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:285
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
@@ -162,7 +162,7 @@ msgstr ""
 #: coops/titans_stronghold.tex:116 coops/stand_united.tex:94
 #: clash/bloody_grail.tex:120 clash/bloody_grail.tex:126
 #: campaigns/inferno_devilish_plan.tex:204 sections/credits.tex:30
-#: sections/credits.tex:34 sections/random_scenario.tex:316
+#: sections/credits.tex:34 sections/random_scenario.tex:314
 #, no-wrap
 msgid ""
 "\\vspace*{\\fill}\n"
@@ -499,106 +499,167 @@ msgstr ""
 "\\end{center}\n"
 "\n"
 
-#. type: Plain text
-#: coops/titans_stronghold.tex:193
+#. type: table*
+#: coops/titans_stronghold.tex:195
+#, no-wrap
 msgid ""
-"\\hommtable[]{28}{ \\centering \\medskip \\textbf{Strength of Titans' "
-"Stronghold Armies}\\\\ \\bigskip \\let\\origbronze\\bronze "
-"\\let\\origsilver\\silver \\let\\origgolden\\golden \\let\\origazure\\azure "
-"\\renewcommand{\\bronze}{\\origbronze[12]} \\renewcommand{\\silver}"
-"{\\origsilver[12]} \\renewcommand{\\golden}{\\origgolden[12]} "
-"\\renewcommand{\\azure}{\\origazure[12]} \\begin{tabularx}{0.95\\linewidth}"
-"{p{0.15\\linewidth}XXXX} & \\darkcell{Easy} & \\darkcell{Normal} & "
-"\\darkcell{Hard} & \\darkcell{Impossible}\\\\ \\darkcell[1.2]{1 player} & "
-"\\lightcell[1.2]{3\\bronze 2\\silver 1\\golden 1\\azure} & \\lightcell[1.2]"
-"{2\\bronze 2\\silver 2\\golden 1\\azure} & \\lightcell[1.2]{2\\bronze "
-"2\\silver 2\\golden 2\\azure} & \\lightcell[1.2]{1\\bronze 2\\silver "
-"2\\golden 3\\azure}\\\\ \\darkcell[1.2]{2 players} & \\lightcell[1.2]"
-"{5\\bronze 5\\silver 3\\golden 1\\azure} & \\lightcell[1.2]{4\\bronze "
-"5\\silver 3\\golden 2\\azure} & \\lightcell[1.2]{2\\bronze 5\\silver "
-"5\\golden 3\\azure} & \\lightcell[1.2]{1\\bronze 5\\silver 7\\golden "
-"4\\azure}\\\\ \\darkcell[1.8]{3 players} & \\lightcell[1.8]{8\\bronze "
-"7\\silver 4\\golden 2\\azure} & \\lightcell[1.8]{6\\bronze 7\\silver "
-"5\\golden 3\\azure} & \\lightcell[1.8]{2\\bronze 3\\silver 4\\golden "
-"3\\azure \\linebreak Then\\linebreak 2\\bronze 4\\silver 3\\golden 2\\azure} "
-"& \\lightcell[1.8]{1\\bronze 3\\silver 5\\golden 3\\azure \\linebreak "
-"Then\\linebreak 1\\bronze 4\\silver 5\\golden 3\\azure}\\\\ \\darkcell[1.8]"
-"{4 players} & \\lightcell[1.8]{10\\bronze 10\\silver\\linebreak 6\\golden "
-"2\\azure} & \\lightcell[1.8]{8\\bronze 10\\silver 6\\golden 4\\azure} & "
-"\\lightcell[1.8]{2\\bronze 5\\silver 5\\golden 3\\azure \\linebreak "
-"Then\\linebreak 2\\bronze 5\\silver 5\\golden 3\\azure} & \\lightcell[1.8]"
-"{1\\bronze 5\\silver 7\\golden 4\\azure \\linebreak Then\\linebreak "
-"1\\bronze 5\\silver 7\\golden 4\\azure}\\\\ \\darkcell[1.8]{5 players} & "
-"\\lightcell[1.8]{6\\bronze 6\\silver 4\\golden 1\\azure \\linebreak "
-"Then\\linebreak 7\\bronze 6\\silver 3\\golden 2\\azure} & \\lightcell[1.8]"
-"{5\\bronze 6\\silver 4\\golden 2\\azure \\linebreak Then\\linebreak "
-"5\\bronze 6\\silver 4\\golden 3\\azure} & \\lightcell[1.8]{3\\bronze "
-"6\\silver 6\\golden 4\\azure \\linebreak Then\\linebreak 3\\bronze 6\\silver "
-"6\\golden 4\\azure} & \\lightcell[1.8]{1\\bronze 6\\silver 8\\golden "
-"6\\azure \\linebreak Then\\linebreak 2\\bronze 6\\silver 8\\golden 5\\azure}"
-"\\\\ \\darkcell[1.8]{6 players} & \\lightcell[1.8]{8\\bronze 8\\silver "
-"4\\golden 1\\azure \\linebreak Then\\linebreak 7\\bronze 7\\silver 5\\golden "
-"2\\azure} & \\lightcell[1.8]{6\\bronze 8\\silver 4\\golden 3\\azure "
-"\\linebreak Then\\linebreak 6\\bronze 7\\silver 5\\golden 3\\azure} & "
-"\\lightcell[1.8]{3\\bronze 8\\silver 7\\golden 5\\azure \\linebreak "
-"Then\\linebreak 3\\bronze 7\\silver 8\\golden 4\\azure} & \\lightcell[1.8]"
-"{3\\bronze 7\\silver 11\\golden 6\\azure \\linebreak Then\\linebreak "
-"3\\bronze 8\\silver 10\\golden 6\\azure}\\\\ \\end{tabularx} }"
+"  \\hommtable[]{28}{\n"
+"    \\centering\n"
+"    \\medskip\n"
+"    \\textbf{Strength of Titans' Stronghold Armies}\\\\\n"
+"    \\bigskip\n"
+"\n"
+"    \\let\\origbronze\\bronze\n"
+"    \\let\\origsilver\\silver\n"
+"    \\let\\origgolden\\golden\n"
+"    \\let\\origazure\\azure\n"
+"    \\renewcommand{\\bronze}{\\origbronze[12]}\n"
+"    \\renewcommand{\\silver}{\\origsilver[12]}\n"
+"    \\renewcommand{\\golden}{\\origgolden[12]}\n"
+"    \\renewcommand{\\azure}{\\origazure[12]}\n"
+"\n"
+"    \\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} & \\darkcell{Easy} & \\darkcell{Normal} & \\darkcell{Hard} & \\darkcell{Impossible}\\\\\n"
+"    \\darkcell[1.2]{1 player}\n"
+"      & \\lightcell[1.2]{3\\bronze 2\\silver 1\\golden 1\\azure}\n"
+"      & \\lightcell[1.2]{2\\bronze 2\\silver 2\\golden 1\\azure}\n"
+"      & \\lightcell[1.2]{2\\bronze 2\\silver 2\\golden 2\\azure}\n"
+"      & \\lightcell[1.2]{1\\bronze 2\\silver 2\\golden 3\\azure}\\\\\n"
+"    \\darkcell[1.2]{2 players}\n"
+"      & \\lightcell[1.2]{5\\bronze 5\\silver 3\\golden 1\\azure}\n"
+"      & \\lightcell[1.2]{4\\bronze 5\\silver 3\\golden 2\\azure}\n"
+"      & \\lightcell[1.2]{2\\bronze 5\\silver 5\\golden 3\\azure}\n"
+"      & \\lightcell[1.2]{1\\bronze 5\\silver 7\\golden 4\\azure}\\\\\n"
+"    \\darkcell[1.8]{3 players}\n"
+"      & \\lightcell[1.8]{8\\bronze 7\\silver 4\\golden 2\\azure}\n"
+"      & \\lightcell[1.8]{6\\bronze 7\\silver 5\\golden 3\\azure}\n"
+"      & \\lightcell[1.8]{2\\bronze 3\\silver 4\\golden 3\\azure \\linebreak\n"
+"        Then\\linebreak\n"
+"        2\\bronze 4\\silver 3\\golden 2\\azure}\n"
+"      & \\lightcell[1.8]{1\\bronze 3\\silver 5\\golden 3\\azure \\linebreak\n"
+"        Then\\linebreak\n"
+"        1\\bronze 4\\silver 5\\golden 3\\azure}\\\\\n"
+"    \\darkcell[1.8]{4 players}\n"
+"      & \\lightcell[1.8]{10\\bronze 10\\silver\\linebreak 6\\golden 2\\azure}\n"
+"      & \\lightcell[1.8]{8\\bronze 10\\silver 6\\golden 4\\azure}\n"
+"      & \\lightcell[1.8]{2\\bronze 5\\silver 5\\golden 3\\azure \\linebreak\n"
+"        Then\\linebreak\n"
+"        2\\bronze 5\\silver 5\\golden 3\\azure}\n"
+"      & \\lightcell[1.8]{1\\bronze 5\\silver 7\\golden 4\\azure \\linebreak\n"
+"        Then\\linebreak\n"
+"        1\\bronze 5\\silver 7\\golden 4\\azure}\\\\\n"
+"    \\darkcell[1.8]{5 players}\n"
+"      & \\lightcell[1.8]{6\\bronze 6\\silver 4\\golden 1\\azure \\linebreak\n"
+"        Then\\linebreak\n"
+"        7\\bronze 6\\silver 3\\golden 2\\azure}\n"
+"      & \\lightcell[1.8]{5\\bronze 6\\silver 4\\golden 2\\azure \\linebreak\n"
+"        Then\\linebreak\n"
+"        5\\bronze 6\\silver 4\\golden 3\\azure}\n"
+"      & \\lightcell[1.8]{3\\bronze 6\\silver 6\\golden 4\\azure \\linebreak\n"
+"        Then\\linebreak\n"
+"        3\\bronze 6\\silver 6\\golden 4\\azure}\n"
+"      & \\lightcell[1.8]{1\\bronze 6\\silver 8\\golden 6\\azure \\linebreak\n"
+"        Then\\linebreak\n"
+"        2\\bronze 6\\silver 8\\golden 5\\azure}\\\\\n"
+"    \\darkcell[1.8]{6 players}\n"
+"      & \\lightcell[1.8]{8\\bronze 8\\silver 4\\golden 1\\azure \\linebreak\n"
+"        Then\\linebreak\n"
+"        7\\bronze 7\\silver 5\\golden 2\\azure}\n"
+"      & \\lightcell[1.8]{6\\bronze 8\\silver 4\\golden 3\\azure \\linebreak\n"
+"        Then\\linebreak\n"
+"        6\\bronze 7\\silver 5\\golden 3\\azure}\n"
+"      & \\lightcell[1.8]{3\\bronze 8\\silver 7\\golden 5\\azure \\linebreak\n"
+"        Then\\linebreak\n"
+"      3\\bronze 7\\silver 8\\golden 4\\azure}\n"
+"      & \\lightcell[1.8]{3\\bronze 7\\silver 11\\golden 6\\azure \\linebreak\n"
+"      Then\\linebreak\n"
+"      3\\bronze 8\\silver 10\\golden 6\\azure}\\\\\n"
+"    \\end{tabularx}\n"
+"  }"
 msgstr ""
-"\\hommtable[]{28}{ \\centering \\medskip \\textbf{Stärke der Armeen in der "
-"Festung der Titanen}\\\\ \\bigskip \\let\\origbronze\\bronze "
-"\\let\\origsilver\\silver \\let\\origgolden\\golden \\let\\origazure\\azure "
-"\\renewcommand{\\bronze}{\\origbronze[12]} \\renewcommand{\\silver}"
-"{\\origsilver[12]} \\renewcommand{\\golden}{\\origgolden[12]} "
-"\\renewcommand{\\azure}{\\origazure[12]} \\begin{tabularx}{0.95\\linewidth}"
-"{p{0.15\\linewidth}XXXX} & \\darkcell{Leicht} & \\darkcell{Normal} & "
-"\\darkcell{Experte} & \\darkcell{Unmöglich}\\\\ \\darkcell[1.2]{1 Spieler} & "
-"\\lightcell[1.2]{3\\bronze 2\\silver 1\\golden 1\\azure} & \\lightcell[1.2]"
-"{2\\bronze 2\\silver 2\\golden 1\\azure} & \\lightcell[1.2]{2\\bronze "
-"2\\silver 2\\golden 2\\azure} & \\lightcell[1.2]{1\\bronze 2\\silver "
-"2\\golden 3\\azure}\\\\ \\darkcell[1.2]{2 Spieler} & \\lightcell[1.2]"
-"{5\\bronze 5\\silver 3\\golden 1\\azure} & \\lightcell[1.2]{4\\bronze "
-"5\\silver 3\\golden 2\\azure} & \\lightcell[1.2]{2\\bronze 5\\silver "
-"5\\golden 3\\azure} & \\lightcell[1.2]{1\\bronze 5\\silver 7\\golden "
-"4\\azure}\\\\ \\darkcell[1.8]{3 Spieler} & \\lightcell[1.8]{8\\bronze "
-"7\\silver 4\\golden 2\\azure} & \\lightcell[1.8]{6\\bronze 7\\silver "
-"5\\golden 3\\azure} & \\lightcell[1.8]{2\\bronze 3\\silver 4\\golden "
-"3\\azure \\linebreak dann\\linebreak 2\\bronze 4\\silver 3\\golden 2\\azure} "
-"& \\lightcell[1.8]{1\\bronze 3\\silver 5\\golden 3\\azure \\linebreak "
-"dann\\linebreak 1\\bronze 4\\silver 5\\golden 3\\azure}\\\\ \\darkcell[1.8]"
-"{4 Spieler} & \\lightcell[1.8]{10\\bronze 10\\silver\\linebreak 6\\golden "
-"2\\azure} & \\lightcell[1.8]{8\\bronze 10\\silver 6\\golden 4\\azure} & "
-"\\lightcell[1.8]{2\\bronze 5\\silver 5\\golden 3\\azure \\linebreak "
-"dann\\linebreak 2\\bronze 5\\silver 5\\golden 3\\azure} & \\lightcell[1.8]"
-"{1\\bronze 5\\silver 7\\golden 4\\azure \\linebreak dann\\linebreak "
-"1\\bronze 5\\silver 7\\golden 4\\azure}\\\\ \\darkcell[1.8]{5 Spieler} & "
-"\\lightcell[1.8]{6\\bronze 6\\silver 4\\golden 1\\azure \\linebreak "
-"dann\\linebreak 7\\bronze 6\\silver 3\\golden 2\\azure} & \\lightcell[1.8]"
-"{5\\bronze 6\\silver 4\\golden 2\\azure \\linebreak dann\\linebreak "
-"5\\bronze 6\\silver 4\\golden 3\\azure} & \\lightcell[1.8]{3\\bronze "
-"6\\silver 6\\golden 4\\azure \\linebreak dann\\linebreak 3\\bronze 6\\silver "
-"6\\golden 4\\azure} & \\lightcell[1.8]{1\\bronze 6\\silver 8\\golden "
-"6\\azure \\linebreak dann\\linebreak 2\\bronze 6\\silver 8\\golden 5\\azure}"
-"\\\\ \\darkcell[1.8]{6 Spieler} & \\lightcell[1.8]{8\\bronze 8\\silver "
-"4\\golden 1\\azure \\linebreak dann\\linebreak 7\\bronze 7\\silver 5\\golden "
-"2\\azure} & \\lightcell[1.8]{6\\bronze 8\\silver 4\\golden 3\\azure "
-"\\linebreak dann\\linebreak 6\\bronze 7\\silver 5\\golden 3\\azure} & "
-"\\lightcell[1.8]{3\\bronze 8\\silver 7\\golden 5\\azure \\linebreak "
-"dann\\linebreak 3\\bronze 7\\silver 8\\golden 4\\azure} & \\lightcell[1.8]"
-"{3\\bronze 7\\silver 11\\golden 6\\azure \\linebreak dann\\linebreak "
-"3\\bronze 8\\silver 10\\golden 6\\azure}\\\\ \\end{tabularx} }"
+"  \\hommtable[]{28}{\n"
+"    \\centering\n"
+"    \\medskip\n"
+"    \\textbf{Stärke der Armeen in der Festung der Titanen}\\\\\n"
+"    \\bigskip\n"
+"\n"
+"    \\let\\origbronze\\bronze\n"
+"    \\let\\origsilver\\silver\n"
+"    \\let\\origgolden\\golden\n"
+"    \\let\\origazure\\azure\n"
+"    \\renewcommand{\\bronze}{\\origbronze[12]}\n"
+"    \\renewcommand{\\silver}{\\origsilver[12]}\n"
+"    \\renewcommand{\\golden}{\\origgolden[12]}\n"
+"    \\renewcommand{\\azure}{\\origazure[12]}\n"
+"\n"
+"    \\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} & \\darkcell{Leicht} & \\darkcell{Normal} & \\darkcell{Experte} & \\darkcell{Unmöglich}\\\\\n"
+"    \\darkcell[1.2]{1 Spieler}\n"
+"      & \\lightcell[1.2]{3\\bronze 2\\silver 1\\golden 1\\azure}\n"
+"      & \\lightcell[1.2]{2\\bronze 2\\silver 2\\golden 1\\azure}\n"
+"      & \\lightcell[1.2]{2\\bronze 2\\silver 2\\golden 2\\azure}\n"
+"      & \\lightcell[1.2]{1\\bronze 2\\silver 2\\golden 3\\azure}\\\\\n"
+"    \\darkcell[1.2]{2 Spieler}\n"
+"      & \\lightcell[1.2]{5\\bronze 5\\silver 3\\golden 1\\azure}\n"
+"      & \\lightcell[1.2]{4\\bronze 5\\silver 3\\golden 2\\azure}\n"
+"      & \\lightcell[1.2]{2\\bronze 5\\silver 5\\golden 3\\azure}\n"
+"      & \\lightcell[1.2]{1\\bronze 5\\silver 7\\golden 4\\azure}\\\\\n"
+"    \\darkcell[1.8]{3 Spieler}\n"
+"      & \\lightcell[1.8]{8\\bronze 7\\silver 4\\golden 2\\azure}\n"
+"      & \\lightcell[1.8]{6\\bronze 7\\silver 5\\golden 3\\azure}\n"
+"      & \\lightcell[1.8]{2\\bronze 3\\silver 4\\golden 3\\azure \\linebreak\n"
+"        dann\\linebreak\n"
+"        2\\bronze 4\\silver 3\\golden 2\\azure}\n"
+"      & \\lightcell[1.8]{1\\bronze 3\\silver 5\\golden 3\\azure \\linebreak\n"
+"        dann\\linebreak\n"
+"        1\\bronze 4\\silver 5\\golden 3\\azure}\\\\\n"
+"    \\darkcell[1.8]{4 Spieler}\n"
+"      & \\lightcell[1.8]{10\\bronze 10\\silver\\linebreak 6\\golden 2\\azure}\n"
+"      & \\lightcell[1.8]{8\\bronze 10\\silver 6\\golden 4\\azure}\n"
+"      & \\lightcell[1.8]{2\\bronze 5\\silver 5\\golden 3\\azure \\linebreak\n"
+"        dann\\linebreak\n"
+"        2\\bronze 5\\silver 5\\golden 3\\azure}\n"
+"      & \\lightcell[1.8]{1\\bronze 5\\silver 7\\golden 4\\azure \\linebreak\n"
+"        dann\\linebreak\n"
+"        1\\bronze 5\\silver 7\\golden 4\\azure}\\\\\n"
+"    \\darkcell[1.8]{5 Spieler}\n"
+"      & \\lightcell[1.8]{6\\bronze 6\\silver 4\\golden 1\\azure \\linebreak\n"
+"        dann\\linebreak\n"
+"        7\\bronze 6\\silver 3\\golden 2\\azure}\n"
+"      & \\lightcell[1.8]{5\\bronze 6\\silver 4\\golden 2\\azure \\linebreak\n"
+"        dann\\linebreak\n"
+"        5\\bronze 6\\silver 4\\golden 3\\azure}\n"
+"      & \\lightcell[1.8]{3\\bronze 6\\silver 6\\golden 4\\azure \\linebreak\n"
+"        dann\\linebreak\n"
+"        3\\bronze 6\\silver 6\\golden 4\\azure}\n"
+"      & \\lightcell[1.8]{1\\bronze 6\\silver 8\\golden 6\\azure \\linebreak\n"
+"        dann\\linebreak\n"
+"        2\\bronze 6\\silver 8\\golden 5\\azure}\\\\\n"
+"    \\darkcell[1.8]{6 Spieler}\n"
+"      & \\lightcell[1.8]{8\\bronze 8\\silver 4\\golden 1\\azure \\linebreak\n"
+"        dann\\linebreak\n"
+"        7\\bronze 7\\silver 5\\golden 2\\azure}\n"
+"      & \\lightcell[1.8]{6\\bronze 8\\silver 4\\golden 3\\azure \\linebreak\n"
+"        dann\\linebreak\n"
+"        6\\bronze 7\\silver 5\\golden 3\\azure}\n"
+"      & \\lightcell[1.8]{3\\bronze 8\\silver 7\\golden 5\\azure \\linebreak\n"
+"        dann\\linebreak\n"
+"        3\\bronze 7\\silver 8\\golden 4\\azure}\n"
+"      & \\lightcell[1.8]{3\\bronze 7\\silver 11\\golden 6\\azure \\linebreak\n"
+"        dann\\linebreak\n"
+"        3\\bronze 8\\silver 10\\golden 6\\azure}\\\\\n"
+"    \\end{tabularx}\n"
+"  }"
 
 #. type: center
-#: coops/titans_stronghold.tex:199
+#: coops/titans_stronghold.tex:201
 msgid ""
-"\\transparent{0.2}{\\includegraphics[width=0.6\\linewidth, keepaspectratio]"
+"\\transparent{0.2}{\\includegraphics[width=0.55\\linewidth, keepaspectratio]"
 "{\\art/land_mine.png}}"
 msgstr ""
-"\\transparent{0.2}{\\includegraphics[width=0.6\\linewidth, keepaspectratio]"
+"\\transparent{0.2}{\\includegraphics[width=0.55\\linewidth, keepaspectratio]"
 "{\\art/land_mine.png}}"
 
 #. type: tikzpicture
-#: coops/titans_stronghold.tex:207
+#: coops/titans_stronghold.tex:209
 #, no-wrap
 msgid ""
 "[remember picture, overlay]\n"
@@ -612,32 +673,32 @@ msgstr ""
 "  };"
 
 #. type: minipage
-#: coops/titans_stronghold.tex:244 coops/emerald_island.tex:121
+#: coops/titans_stronghold.tex:246 coops/emerald_island.tex:121
 msgid "\\captionof{figure}{\\textbf{1-PLAYER SCENARIO}}"
 msgstr "\\captionof{figure}{\\textbf{1-SPIELER-SZENARIO}}"
 
 #. type: minipage
-#: coops/titans_stronghold.tex:244 coops/emerald_island.tex:121
+#: coops/titans_stronghold.tex:246 coops/emerald_island.tex:121
 msgid "\\captionof{figure}{\\textbf{2-PLAYER SCENARIO}}"
 msgstr "\\captionof{figure}{\\textbf{2-SPIELER-SZENARIO}}"
 
 #.  \linebreak
 #. type: minipage
-#: coops/titans_stronghold.tex:244 coops/emerald_island.tex:121
+#: coops/titans_stronghold.tex:246 coops/emerald_island.tex:121
 msgid "\\captionof{figure}{\\textbf{3-PLAYER SCENARIO}}"
 msgstr "\\captionof{figure}{\\textbf{3-SPIELER-SZENARIO}}"
 
 #. type: minipage
-#: coops/titans_stronghold.tex:244 coops/emerald_island.tex:121
+#: coops/titans_stronghold.tex:246 coops/emerald_island.tex:121
 msgid "\\captionof{figure}{\\textbf{4-PLAYER SCENARIO}}"
 msgstr "\\captionof{figure}{\\textbf{4-SPIELER-SZENARIO}}"
 
 #. type: minipage
-#: coops/titans_stronghold.tex:244
+#: coops/titans_stronghold.tex:246
 msgid "\\captionof{figure}{\\textbf{5-PLAYER SCENARIO}}"
 msgstr "\\captionof{figure}{\\textbf{5-SPIELER-SZENARIO}}"
 
 #. type: minipage
-#: coops/titans_stronghold.tex:244
+#: coops/titans_stronghold.tex:246
 msgid "\\captionof{figure}{\\textbf{6-PLAYER SCENARIO}}"
 msgstr "\\captionof{figure}{\\textbf{6-SPIELER-SZENARIO}}"
